p2/scripts/deployment-app-three.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-three
  labels: 
    app: app-three
spec:
  selector:
    matchLabels:
      app: app-three
  template:
    metadata:
      labels:
        app: app-three
    spec:
      containers:
      - name: hello-kubernetes
        image: paulbouwer/hello-kubernetes:1.10
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: "512Mi"
            cpu: "400m"
          limits:
            memory: "1524Mi"
            cpu: "800m"
