p2/scripts/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-app
spec:
  ports:
  - port: 80
    protocol: TCP
  selector:
    app: nginx-app
